--- a/SELI-Platform/client/stylesheet/dialog.css
+++ b/SELI-Platform/client/stylesheet/dialog.css
@@ -180,3 +180,50 @@
   animation-fill-mode: backwards;
   animation-delay: 1s;
 }
+
+.media-dialog {
+
+}
+
+.app-tooltip {
+  position: absolute;
+  right: 1vw;
+  letter-spacing: 1.5px;
+  font-size: 0.75em;
+  color: #f5f5f5;
+}
+
+.quiz-dialog-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 !important;
+}
+
+.full-screen-dialog-mid-container {
+  width: auto;
+  height: 20vh;
+  animation: fadeInDown 1s;
+}
+
+.quiz-dialog-content-text {
+  width: 70% !important;
+  word-break: break-all !important;
+  letter-spacing: 1px !important;
+  font-size: 1.5em !important;
+  color: #616161 !important;
+}
+
+.quiz-dialog-icon-big {
+  font-size: 5em !important;
+  color: #616161 !important;
+  margin-right: 2.5vw !important;
+}
+
+.dialog-confirmation-button {
+  font-size: 1.25em !important;
+  letter-spacing: 1px !important;
+  margin: 5vh 1vw !important;
+}
