--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -517,6 +517,7 @@
   width: calc(100% - var(--menu-item-width));
   height: auto;
   display: flex;
+  position: relative;
 }
 
 .embebed-description-item-section {
@@ -528,6 +529,16 @@
   width: 95%;
 }
 
+.embebed-loading-container {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--white);
+}
+
 .embebed-item-container-activity {
   width: 100%;
   display: flex;
@@ -536,6 +547,10 @@
   position: relative;
 }
 
+.pdf-dialog-content {
+  width: 100%;
+  height: 100%;
+}
 
 .course-creator-item-video-card-preview-player {
   width: 480px !important;
@@ -545,4 +560,13 @@
 
 .course-item-audio-card {
   width: 500px !important;
+}
+
+.done-icon {
+  color: #4caf50;
+}
+
+.align-items-center {
+  display: flex;
+  align-items: center;
 }
