--- a/SELI-Platform/client/stylesheet/forms.css
+++ b/SELI-Platform/client/stylesheet/forms.css
@@ -64,6 +64,16 @@
   animation: fadeIn 0.5s;
 }
 
+.embeb-certificate-container {
+  width: 100vw;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px;
+  animation: fadeIn 0.5s;
+}
+
 .dialog-input-container {
   width: 40vw;
   height: auto;
