--- a/SELI-Platform/client/stylesheet/accessibility-form.css
+++ b/SELI-Platform/client/stylesheet/accessibility-form.css
@@ -46,12 +46,11 @@
 }
 
 .accessibility-percentage-container {
-  width: auto;
-  margin: 0 2.5vw;
+  width: 100%;
   height: 100%;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  justify-content: center;
+  margin-top: 2vh;
   position: relative;
 }
 
@@ -65,6 +64,8 @@
   width: 80px;
   height: 80px;
   z-index: 205;
+  position: absolute;
+  right: calc(50% - 40px);
 }
 
 .accessibility-percentage-value {
@@ -74,7 +75,7 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  right: 0;
+  right: calc(50% - 40px);
   background-color: #f5f5f5;
   border-radius: 100%;
   z-index: 200;
@@ -103,4 +104,75 @@
   align-items: center;
   margin-top: -2.5vh;
   margin-bottom: 2.5vh;
+}
+
+.accessibility-form-title {
+  font-weight: 300;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-size: 1.25em;
+  color: #333;
+  padding: 1.5vh 0;
+}
+
+.accessibility-form-label {
+  letter-spacing: 1px !important;
+  padding: 1vh 0 !important;
+}
+
+.accessibility-form-helper-text {
+  display: flex;
+  align-items: center;
+}
+
+.accessibility-form-helper-text span {
+  margin: 0 0.25vw !important;
+}
+
+.help-label-medium {
+  font-size: 0.95em;
+}
+
+.accessibility-form-helper-row {
+  display: flex;
+  align-items: center;
+  padding: 0.75vh 0;
+}
+
+.accessibility-form-helper-row .MuiButton-textSecondary {
+  margin-left: 0.5vw !important;
+  padding-left: 4px !important;
+  padding-right: 4px !important;
+}
+
+#long-description-position-container {
+  display: flex;
+  align-items: center;
+}
+
+#long-description-position-container #long-description-position-label {
+  margin-right: 1.25vw;
+}
+
+.vertical-tabs-container {
+  border-right: solid 1px #e0e0e0 !important;
+}
+
+.accessibility-form-side-container {
+  max-width: 50vw !important;
+  width: 40vw !important;
+  min-width: 40vw !important;
+  max-height: 75vh;
+  overflow-y: scroll;
+}
+
+.a11yEditor {
+  background-color: #333;
+}
+
+.a11yEditor-controls {
+  width: 100% !important;
+  display: flex !important;
+  justify-content: center !important;
+  margin-top: 1.5vh !important;
 }
