--- a/SELI-Platform/client/stylesheet/account-management.css
+++ b/SELI-Platform/client/stylesheet/account-management.css
@@ -67,3 +67,13 @@
   justify-content: center;
   align-items: center;
 }
+
+.form-input-column-align-center {
+  width: 70%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 15%
+}
