--- a/SELI-Platform/client/stylesheet/storytelling.css
+++ b/SELI-Platform/client/stylesheet/storytelling.css
@@ -9,18 +9,37 @@
 
 .storytelling-work-area {
   width: calc(100vw - 400px);
-  height: 100%;
-  background-color: #eeeeee;
+  max-height: calc(100vh - var(--app-bar-height) - 5vh - 2.5em);
+  padding-top: 2.5em;
+  padding-bottom: 5vh;
+  background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
+  position: relative;
 }
 
 .storytelling-menu-container {
-  width: calc(400px - 2vw);
-  padding: 0 1vw;
-  height: 100%;
+  width: calc(400px);
+  max-height: calc(100vh - var(--app-bar-height));
   position: relative;
+}
+
+.storytelling-menu-header {
+  width: 100%;
+  height: calc(20vh - 1px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-bottom: solid 1px #bdbdbd;
+}
+
+.storytelling-menu-body {
+  width: calc(100% - 2vw);
+  padding: 0 1vw;
+  max-height: calc(100vh - var(--app-bar-height) - 20vh);
+  overflow-y: scroll;
 }
 
 .storytelling-menu-title {
@@ -35,8 +54,18 @@
 
 .storytelling-delete-button {
   position: absolute !important;
-  left: -28px !important;
+  left: -31.75px !important;
   bottom: 5vh !important;
+  animation: zoomIn 1s;
+}
+
+.storytelling-work-preview-button {
+  position: fixed !important;
+  top: calc(var(--app-bar-height) + 2.5em + 4vh) !important;
+  left: 2vw !important;
+  letter-spacing: 2px !important;
+  font-size: 1.15em !important;
+  animation: fadeInLeft 0.5s ease-out;
 }
 
 .storytelling-item-full-container {
@@ -123,6 +152,8 @@
   font-size: 2.5em;
   font-weight: 100;
   color: #333;
+  position: fixed;
+  top: calc(var(--app-bar-height));
   text-transform: uppercase;
   padding: 2vh 2vw;
   animation: fadeInLeft 1.5s;
@@ -136,4 +167,34 @@
   font-size: 2.15em !important;
   width: 34px;
   height: 34px;
+}
+
+.storytelling-item-name {
+  letter-spacing: 1px;
+  font-size: 0.95em;
+  cursor: pointer;
+}
+
+.storytelling-media-preview-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2vh 0;
+}
+
+.storytelling-media-button {
+  margin: 0 0.25vw !important;
+  margin-top: 1.5vh !important;
+  letter-spacing: 1px !important;
+  font-size: 0.85em !important;
+}
+
+.storytelling-media-image {
+  width: 350px;
+  height: 350px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
