--- a/SELI-Platform/client/stylesheet/storytelling.css
+++ b/SELI-Platform/client/stylesheet/storytelling.css
@@ -198,3 +198,80 @@
   background-position: center;
   background-size: contain;
 }
+
+.storytelling-player-image-container {
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-color: rgba(0, 0, 0, 0.95);
+}
+
+.storytelling-player-description {
+  width: 98vw;
+  padding: 1.5vh 1vw;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  letter-spacing: 1px;
+  font-size: 1em;
+  text-align: justify;
+  top: 0;
+  left: 0;
+  user-select: none;
+  background-color: rgba(255, 255, 255, 0.65);
+}
+
+.storytelling-player-actions {
+  width: auto;
+  padding: 0 2vw;
+  height: 15vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  animation: fadeInRight 0.5s;
+}
+
+.storytelling-player-actions .Mui-disabled {
+  background-color: #f5f5f5 !important;
+}
+
+.storytelling-player-fab {
+  margin: 0 0.25vw !important;
+}
+
+.storytelling-tool-audio-player {
+  width: 0 !important;
+  height: 0 !important;
+}
+
+.storytelling-player-fab-icon {
+  font-size: 2em !important;
+}
+
+.storytelling-player-more-menu-icon {
+  color: var(--white) !important;
+}
+
+.storytelling-player-pop-menu {
+  display: flex;
+  flex-direction: column;
+  padding: 1vh 1vw;
+}
+
+.storytelling-return-button {
+  position: fixed;
+  bottom: 2.5vh;
+  left: 2.5vw;
+  font-size: 1.5em !important;
+  letter-spacing: 1px !important;
+}
+
+.storytelling-return-icon {
+  margin-right: 1vw !important;
+}
