Certificates integration hash change
rest services request changed to hash instead of certificate number
certificated number eliminated
certificates array on the users collection in mongo

--- a/SELI-Platform/client/stylesheet/forms.css
+++ b/SELI-Platform/client/stylesheet/forms.css
@@ -74,6 +74,15 @@
   animation: fadeIn 0.5s;
 }
 
+.exclamation-mark-container {
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 25px;
+  animation: fadeIn 0.5s;
+}
+
 .dialog-input-container {
   width: 40vw;
   height: auto;
