--- a/SELI-Platform/client/stylesheet/sign.css
+++ b/SELI-Platform/client/stylesheet/sign.css
@@ -34,7 +34,20 @@
   padding-top: 3.5vh;
 }
 
+.sign-buttons-container-default {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .sign-button {
+  padding: 0.75vh 1.95vw !important;
+  letter-spacing: 2px !important;
+  margin: 0 0.5vw !important;
+}
+
+.sign-button-default {
+  width: 50%;
   padding: 0.75vh 1.95vw !important;
   letter-spacing: 2px !important;
   margin: 0 0.5vw !important;
