--- a/SELI-Platform/client/main.css
+++ b/SELI-Platform/client/main.css
@@ -337,3 +337,17 @@ figure.group.caption-bottom, figure.group.caption-bottom>figcaption {
 .hide{
   display: none!important;
 }
+
+
+  .root {
+    display: 'flex',
+    flexWrap: 'wrap',
+    justifyContent: 'space-around',
+    overflow: 'hidden',
+    backgroundColor: theme.palette.background.paper,
+  }
+
+  .gridList {
+    width: 500,
+    height: 450,
+  }
