--- a/SELI-Platform/client/stylesheet/item-cards.css
+++ b/SELI-Platform/client/stylesheet/item-cards.css
@@ -27,6 +27,18 @@
 
 }
 
+.timebutton{
+  margin-top: 5px;
+  background-color: rgb(238, 238, 238); /* Green */
+  border: 2px solid rgb(240, 10, 10); 
+  color: rgb(240, 10, 10);
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 9px;
+  border-radius: 30% !important;
+
+}
 .course-item-video-card-media-fab {
   background-color: var(--white) !important;
   color: #333 !important;
