--- a/SELI-Platform/client/stylesheet/storytelling.css
+++ b/SELI-Platform/client/stylesheet/storytelling.css
@@ -15,21 +15,30 @@
   display: flex;
 }
 
-.storytelling-work-area {
+.storytelling-work-area-full {
   /* width: calc(100vw - 400px); */
   width: calc(100vw - 550px);
-  max-height: calc(100vh - var(--app-bar-height) - 5vh - 2.5em);
+  height: calc(100vh - var(--app-bar-height) - 2.5em);
   padding-top: 2.5em;
-  padding-bottom: 5vh;
   background-color: #f5f5f5;
   display: flex;
   flex-direction: column;
+  overflow-x: scroll;
   overflow-y: scroll;
   position: relative;
 }
 
+.storytelling-work-area {
+  padding-top: 2em; 
+  padding-bottom: 5vh;
+  background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  /* overflow-y: scroll; */
+  position: relative;
+}
+
 .storytelling-menu-container {
-  /* width: calc(400px); */
   width: calc(550px);
   max-height: calc(100vh - var(--app-bar-height));
   position: relative;
@@ -45,18 +54,20 @@
   border-bottom: solid 1px #bdbdbd;
 }
 
+.storytelling-menu-body-full{
+  width: calc(100%);
+  height: calc(85vh - var(--app-bar-height));
+  overflow-y: scroll;
+}
+
 .storytelling-menu-body {
   width: calc(100% - 2vw);
   padding: 0 1vw;
-  max-height: calc(100vh - var(--app-bar-height) - 20vh);
-  overflow-y: scroll;
 }
 
 .storytelling-menu-body-aux {
   width: calc(100% - 2vw);
   padding: 0 1vw;
-  max-height: calc(100vh - var(--app-bar-height) - 20vh);
-  overflow-y: scroll;
   display: flex;
 }
 
@@ -82,7 +93,7 @@
 
 .storytelling-delete-button {
   position: absolute !important;
-  left: -31.75px !important;
+  left: calc(100vw - 581.75px)!important;
   bottom: 5vh !important;
   animation: zoomIn 1s;
 }
@@ -220,8 +231,8 @@
 }
 
 .storytelling-media-image {
-  width: 350px;
-  height: 350px;
+  width: 528px;
+  height: 297px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
