--- a/SELI-Platform/client/stylesheet/preview.css
+++ b/SELI-Platform/client/stylesheet/preview.css
@@ -139,7 +139,7 @@
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100%;
+  background-size: contain;
 }
 
 /**/
