--- a/SELI-Platform/client/stylesheet/storytelling.css
+++ b/SELI-Platform/client/stylesheet/storytelling.css
@@ -230,9 +230,30 @@
   font-size: 0.85em !important;
 }
 
+.storytelling-image-library {
+    width: 16vw;
+    height: 9vw;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    padding: 0.1vw;
+    margin: auto;
+}
+
 .storytelling-media-image {
-  width: 528px;
+  align-content: center;
+  width: 450px;
   height: 297px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  padding: 0.1vw;
+  margin: auto;
+}
+
+.storytelling-media-image1 {
+  align-content: center;
+  height: 200px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
