--- a/SELI-Platform/client/stylesheet/storytelling.css
+++ b/SELI-Platform/client/stylesheet/storytelling.css
@@ -259,14 +259,13 @@
 }
 
 .storytelling-player-image-container {
-  align-content: center;
-  margin: auto;
+  align-content: center !important;
+  background-size: cover; 
   width: 100%;
   height: 100%;
   transition: 0.5s;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: contain;
   background-color: rgba(0, 0, 0, 0.95);
 }
 
