--- a/SELI-Platform/client/stylesheet/data-display.css
+++ b/SELI-Platform/client/stylesheet/data-display.css
@@ -17,6 +17,24 @@
 }
 
 .management-title {
+  width: 100vw;
+  height: 4vh;
+  position: fixed;
+  top: var(--app-bar-height);
+  display: flex;
+  align-items: center;
+  padding: 1.5vh 0;
+  color: #424242;
+  background-color: #f5f5f5;
+  text-indent: calc(var(--menu-size) + 2vw);
+  letter-spacing: 2.75px;
+  font-size: 1.4em;
+  text-transform: uppercase;
+  animation: fadeInDown 0.5s;
+  z-index: 400;
+}
+
+.management-title-published {
   width: 40vw;
   height: 4vh;
   position: fixed;
