--- a/SELI-Platform/client/stylesheet/course-creator-forms.css
+++ b/SELI-Platform/client/stylesheet/course-creator-forms.css
@@ -11,8 +11,17 @@
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
+}
+
+.form-column-container {
+  margin-top: 3vh;
+  margin-left: 1vw;
+  position: relative;
+  align-items: center;
+  height: 100%;
+  justify-content: center;
+  animation: fadeIn 0.5s;
 }
 
 .course-creator-form-column {
@@ -27,6 +36,13 @@
 .course-creator-file-form-column {
   width: 50%;
   height: 100%;
+}
+
+.course-creator-default-form-column {
+  width: 50%;
+  height: 100%;
+  align-items: center;
+  margin: auto;
   position: relative;
 }
 
@@ -38,6 +54,8 @@
 
 .course-creator-input-container {
   width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .course-creator-collection-actions-container {
