--- a/SELI-Platform/client/stylesheet/dialog.css
+++ b/SELI-Platform/client/stylesheet/dialog.css
@@ -84,16 +84,21 @@
   animation-delay: 0.25s;
 }
 
-.menu-tab-button-container {
-  height: 56px;
-  position: fixed !important;
-  width: calc(42.5vw - 150px);
-  margin-top: 1vh;
-  margin-left: 1vw;
+.library-button-container {
+  margin-top: 3vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 5000;
+  animation: fadeInDown 0.5s;
+  animation-fill-mode: backwards;
+  animation-delay: 0.25s;
+}
+
+.menu-tab-button-container {
+  width: 100%;
+  margin-top: 1vh;
+  margin-left: 1vw;
+  justify-content: center;
   animation: fadeInDown 0.5s;
   animation-fill-mode: backwards;
   animation-delay: 0.25s;
