Requirement 18.06 changes to presentation styles

--- a/SELI-Platform/client/stylesheet/course-information.css
+++ b/SELI-Platform/client/stylesheet/course-information.css
@@ -20,7 +20,15 @@
 }
 
 .buttomAudiences{
-  border-radius: 15px !important;
+  border-radius: 35px !important;
+
+}
+.buttomAudiencesSend{
+  border-radius: 100px !important;
+  display: inline-block;
+  margin-top: 19px !important;
+  align-content: left;
+  
 }
 
 .row-input {
