--- a/SELI-Platform/client/stylesheet/course-creator-tool.css
+++ b/SELI-Platform/client/stylesheet/course-creator-tool.css
@@ -27,17 +27,21 @@
 .title-course{
  width: 100% !important;
  text-align: left !important;
- text-transform: uppercase;
+ text-transform: capitalize !important;
  background-color: #f5f5f5;
- font-size: 28.5px;
+ font-size: 18.5px;
  font-weight: 100;
  letter-spacing: 1px;
  color: #0288d1;
 }
 
 .subtitle{
-  width: 84% !important;
-  text-align: center !important;
+  width: 19% !important;
+  text-align: left ;
+  text-transform: uppercase;
+  display: inline-block;
+  position: relative;
+
 }
 
 .course-creator-drop-area {
@@ -61,15 +65,8 @@
 
 .course-creator-menu-area {
   width: var(--course-tool-menu-size);
-  height: calc(
-    100vh -
-    (
-      var(--app-bar-height) +
-      var(--form-stepper-height) +
-      2px
-    )
-  );
-  position: fixed;
+  
+  position: absolute;
   right: 0;
   background-color: #f5f5f5;
 }
