--- a/SELI-Platform/client/stylesheet/preview.css
+++ b/SELI-Platform/client/stylesheet/preview.css
@@ -8,6 +8,24 @@
   animation: fadeInDown 0.25s;
 }
 
+.video-preview-container {
+  width: 100%;
+  height: 290px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fadeInDown 0.25s;
+}
+
+.video-preview-container-library {
+  width: 100%;
+  height: 220px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fadeInDown 0.25s;
+}
+
 .file-preview-information {
   height: 100%
 }
