--- a/SELI-Platform/client/stylesheet/storytelling.css
+++ b/SELI-Platform/client/stylesheet/storytelling.css
@@ -414,6 +414,14 @@
   animation: fadeInLeft 0.5s !important;
 }
 
+.story-rename-container {
+  align-items: center;
+  width: 100%-2vw;
+  padding: 0 1vw;
+  transition: 0.5s;
+  animation: fadeInLeft 0.5s;
+}
+
 .story-item-container:hover {
   background-color: #f5f5f5;
   cursor: pointer;
