--- a/SELI-Platform/client/stylesheet/quiz.css
+++ b/SELI-Platform/client/stylesheet/quiz.css
@@ -184,6 +184,16 @@ display: flex
   position: initial;
 }
 
+.quiz-dashboard-questions-containerTutor {
+  position: relative;
+  width: 50%;
+  margin-left: 1%;
+  animation: fadeInDown 0.75s;
+  padding: 0 2.5%;
+  display: flex;
+  margin: 2vh;
+}
+
 .quiz-dashboard-label-text {
   letter-spacing: 2px;
   font-size: 0.95em;
