--- a/SELI-Platform/client/stylesheet/preview.css
+++ b/SELI-Platform/client/stylesheet/preview.css
@@ -191,7 +191,7 @@
 }
 
 .audio-file-preview {
-  width: 20vw;
+  width: 95%;
   height: 5vh;
   background-position: center;
   background-repeat: no-repeat;
