--- a/SELI-Platform/client/stylesheet/quiz.css
+++ b/SELI-Platform/client/stylesheet/quiz.css
@@ -217,7 +217,7 @@ display: flex
 
 .question-dashboard-button {
   letter-spacing: 1px !important;
-  margin: 0 0.25vw !important;
+  margin: 0 0.25vw    !important;
   border-radius: 0 !important;
   animation: fadeIn 0.5s;
 }
@@ -272,6 +272,10 @@ display: flex
   display: flex !important;
   flex-wrap: wrap !important;
   flex-direction: row !important;
+}
+.question-dashboard-radio-group-student{
+  display: flex !important;
+  flex-wrap: wrap !important;
 }
 
 .student-answers{
