--- a/SELI-Platform/client/stylesheet/quiz.css
+++ b/SELI-Platform/client/stylesheet/quiz.css
@@ -305,3 +305,13 @@ display: flex
   display: flex;
 }
 
+.student-scores-results{
+  margin: 1vh 1vw;
+  border-style: dotted;
+  display: flex;
+  
+}
+
+.note{
+  margin-right: 50px;
+}
